crates/test-files/fixtures/compile_errors/duplicate_method_in_contract.fe
contract Foo {
    pub fn bar() {}

    pub fn bar() {}
}
